# POKUSoUsvit

./: Aplikacia.cpp  Aplikacia.h  CMakeLists.txt  Obchod.cpp  Obchod.h  Recept.h  Sklad.cpp  Sklad.h  Surovina.cpp  Surovina.h  Vyroba.cpp  Vyroba.h  Vyrobok.cpp  Vyrobok.h  main.cpp
Suroviny/: Drevo.cpp  Drevo.h
